something in tut03 is fixed now

--- a/book/Parts/Part4.tex
+++ b/book/Parts/Part4.tex
@@ -758,8 +758,8 @@ Now we plot the lift coefficient, drag coefficient, and density residual against
     \item Record the lift and drag coefficients.
     \item Plot the surface pressure coefficient with coloured contours and contour lines.
     \item Plot the surface Mach number with coloured contours and contour lines.
-    \item Plot the value of Cd, Cl and the density residual vs. the number of iterations.
-\end{enumerate}\\
+    \item Plot the value of $C_L$, $C_D$ and the density residual vs. the number of iterations.
+\end{enumerate}
 2. Modify the configuration file in the multi-grid folder (\texttt{MGLEVEL= 3, MGCYCLE= W\_CYCLE}) and repeat Q.1 using multi-grid scheme.\\
 3. Compare the results in part (a)-(e) of Q.1 and Q.2. In what way is the use of multi-grid advantageous for this test case?\\
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
